--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,12 @@
     "@prisma/client": "^6.7.0",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.3",
-    "prisma": "^6.7.0",
     "react-hook-form": "^7.56.3",
     "use-debounce": "^10.0.4",
     "zod": "^3.24.4"
@@ -34,6 +34,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.3",
+    "prisma": "^6.7.0",
     "supertest": "^7.1.0",
     "tailwindcss": "^4.1.5",
     "ts-jest": "^29.3.2",
